# sctkpy

./: .gitignore  LICENSE  README.md  cli.py  pyproject.toml  sctk.py  setup.py
sctkpy/: __init__.py  __main__.py  cli.py  config.py  config.toml  core.py  db_funcs.py  member.py  reports.py
sctkpy/member/: course.py  member.py  study_hour_tier.py  term.py
sctkpy/reports/: files_report.py  grade_report.py  member_report.py  study_check_report.py  study_hour_report.py
sctkpy/templates/: files_hit_list_template.xlsx  grade_report_template.xlsx  individual_grade_report_template.xlsx  member_report_template.xlsx  study_checks_template.xlsx
tests/: __init__.py  context.py  test_gpa_presets.py  test_no_punting_evaluation.py  test_obj.py  test_social_probation_evaluation.py  test_study_hour_evaluation.py  utils.py
