[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sctkpy"
version = "0.1.0"
description = "The Scholarship Chairman's Toolkit."
authors = [{ name = "Jimmy Hoerschgen", email = "jthoerschgen@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = ["openpyxl"]

[project.urls]
Repository = "https://github.com/jthoerschgen/sctkpy"

[project.scripts]
sctkpy-cli = "sctkpy.cli:main"

[tool.black]
line-length = 79

[tool.flake8]
max-line-length = 79
exclude = ["__pycache__"]
extend-ignore = []        # Put any PEP 8 Style Guide Exceptions Here

[tool.isort]
profile = "black"
line_length = 79
known_third_party = ["flask", "requests"]
skip = ["__pycache__"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true

[tool.pydoclint]
style = 'google'
exclude = '\.git|\.tox|tests/data|some_script\.py'
require-return-section-when-returning-nothing = true
